--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="Day 07-1st-answer.js"></script>
+    <script src="Data.js"></script>
+    <script src="personclass.js"></script>
 </body>
 </html>
