--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="Data.js"></script>
     <script src="personclass.js"></script>
+    <script src="uber.js"></script>
 </body>
 </html>
